# vla-shield

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/migrations/: data.sql
backend/shield/: schemas.py
backend/shield/api/: app.py  deps.py  evaluator.py  rule_engine.py
backend/shield/data/: __init__.py  download.py  validate.py
backend/shield/evaluation/: __init__.py
backend/shield/vfv/: __init__.py
backend/tests/: test_metrics.py  test_schemas.py
backend/vlashield/: __init__.py  schemas.py
backend/vlashield/api/: app.py  deps.py
backend/vlashield/data/: download.py  validate.py
backend/vlashield/evaluation/: metrics.py
backend/vlashield/training/: __init__.py  penalty.py
backend/vlashield/vfv/: predictor.py
benchmark/: README.md  bench_zero_copy.py  protocol.md  run_latency.py  run_safety.py
benchmark/scenarios/: README.md
dataset/ontology/: physical.json  rule_schema.json  rules_physical.json  rules_semantic.json  semantic.json
dataset/red_team/: samples.jsonl  schema.json
dataset/scenarios/: scenario_spec.md  scenarios.jsonl
dataset/urdf/: README.md  panda_arm_simple.urdf  ur5_simple.urdf
deploy/: .env.example  Dockerfile  docker-compose.yml
deploy/edge/: .env.jetson.example  docker-compose.jetson.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  TECHNICAL_DESIGN.md
docs/openapi/: vlashield-ops-v1.yaml
monitor/: next.config.mjs  package.json  tailwind.config.ts
monitor/src/app/: layout.tsx  page.tsx
monitor/src/components/: EventTimeline.tsx  Header.tsx  LatencyChart.tsx  RiskGauge.tsx  RuleViewer.tsx  SceneView.tsx  WhyBlocked.tsx
monitor/src/hooks/: useTelemetryWs.ts
monitor/src/store/: telemetry.ts
ros2/vla_shield_msgs/: CMakeLists.txt  package.xml
ros2/vla_shield_msgs/msg/: ActionProposal.msg  RiskTelemetry.msg  SafetyDecision.msg
ros2/vla_shield_msgs/srv/: ExplainBlock.srv
runtime/: Cargo.toml
runtime/shield-collision/: Cargo.toml
runtime/shield-collision/src/: broad_phase.rs  lib.rs
runtime/shield-core/: Cargo.toml
runtime/shield-core/src/: action.rs  arbiter.rs  error.rs  ontology.rs  scene.rs
runtime/shield-cuda/: Cargo.toml  README.md  build.rs
runtime/shield-cuda/examples/: bench_clamp.rs
runtime/shield-cuda/src/: lib.rs
runtime/shield-cuda/src/kernels/: clamp_kernel.cu  clamp_stub.cpp  cuda_host.cpp
runtime/shield-ffi/: Cargo.toml
runtime/shield-ffi/src/: convert.rs  error.rs  lib.rs
runtime/shield-io/: Cargo.toml
runtime/shield-io/src/: lib.rs  mysql.rs  redis_io.rs
runtime/shield-physics/: Cargo.toml
runtime/shield-physics/src/: lib.rs  projection.rs  semantic.rs
runtime/shield-ros2/: Cargo.toml
runtime/shield-ros2/src/: config.rs  lib.rs  node.rs  pipeline.rs  tf2.rs
runtime/shield-shadow/: Cargo.toml
runtime/shield-shadow/src/: joint_space.rs  lib.rs  result.rs
runtime/shield-urdf/: Cargo.toml
runtime/shield-urdf/src/: forward_kinematics.rs  lib.rs  urdf_loader.rs
runtime/vlashield-collision/: Cargo.toml
runtime/vlashield-collision/src/: broad_phase.rs  lib.rs
runtime/vlashield-core/: Cargo.toml
runtime/vlashield-core/src/: arbiter.rs  error.rs  lib.rs  ontology.rs  types.rs
runtime/vlashield-io/: Cargo.toml
runtime/vlashield-io/src/: lib.rs  mysql.rs  redis_io.rs
runtime/vlashield-physics/: Cargo.toml
runtime/vlashield-physics/src/: lib.rs  projection.rs
runtime/vlashield-ros2/: Cargo.toml
runtime/vlashield-ros2/src/: config.rs  lib.rs  pipeline.rs  tf2.rs
runtime/vlashield-urdf/: Cargo.toml
runtime/vlashield-urdf/src/: error.rs  forbidden_zone.rs
