[workspace]
resolver = "2"
members = [
    "shield-core",
    "shield-urdf",
    "shield-physics",
    "shield-collision",
    "shield-cuda",
    "shield-ros2",
    "shield-io",
    "shield-ffi",
    "shield-shadow",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/your-org/VLA-Shield"

[workspace.dependencies]
shield-core      = { path = "shield-core" }
shield-urdf      = { path = "shield-urdf" }
shield-physics   = { path = "shield-physics" }
shield-collision = { path = "shield-collision" }
shield-cuda      = { path = "shield-cuda" }
shield-io        = { path = "shield-io" }
shield-shadow    = { path = "shield-shadow" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
nalgebra = "0.33"
quick-xml = "0.37"
pyo3 = { version = "0.22", features = ["extension-module"] }
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
