[package]
name = "shield-collision"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Broad-phase and narrow-phase collision precheck for VLA-Shield"

[dependencies]
shield-core = { workspace = true }
shield-physics = { workspace = true }
nalgebra = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
