[package]
name = "shield-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Optional CUDA acceleration layer for VLA-Shield hot-path primitives"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
cc = "1"
