[package]
name = "shield-shadow"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust-native shadow path simulation: multi-step joint-space trajectory pre-check for the VLA-Shield async safety layer."

[dependencies]
shield-core = { workspace = true }
shield-urdf = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
