[package]
name = "vlashield-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "I/O layer: MySQL and Redis logging and streaming for VLA-Shield"

[dependencies]
vlashield-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
