[package]
name = "vlashield-physics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Physical projection and conservative dynamics checks for VLA-Shield"

[dependencies]
vlashield-core = { workspace = true }
vlashield-urdf = { workspace = true }
nalgebra = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
