[package]
name = "vlashield-ros2"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ROS 2 integration for vlashield-Runtime (rclrs bridge, QoS, message adapters)"

[features]
default = []
ros2 = ["dep:rclrs"]

[dependencies]
vlashield-core = { workspace = true }
vlashield-physics = { workspace = true }
vlashield-collision = { workspace = true }
vlashield-io = { workspace = true }
vlashield-urdf = { workspace = true }
nalgebra = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rclrs = { version = "0.4", optional = true }
